# edu_platform

./: .env  .pre-commit-config.yaml  docker-compose.yaml  pyproject.toml  settings.py
app/: tools.py
app/dao/: session.py  user.py
app/dao/models/: user.py
app/dao/schemas/: base_schema.py  user.py
