[tool.poetry]
name = "educon"
version = "0.1.0"
description = ""
authors = ["alstacon <alstacon@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.92.0"
psycopg2-binary = "^2.9.5"
uvicorn = "^0.20.0"
sqlalchemy = "^2.0.5.post1"
envparse = "^0.2.0"
asyncpg = "^0.27.0"
alembic = "^1.10.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
